Fixing bugs: *Fixed email validation *Search query variable was wrong when creating a new module *Fixed menu editing -> validation was denying update saying that the element already exists *Fixed label for radio and checkbox on the form *Fixed index of the dashboard setup overlapping the widgets hover boxes

--- a/themes/natural/css/natural-dashboard.css
+++ b/themes/natural/css/natural-dashboard.css
@@ -552,7 +552,7 @@
 		top:5px; 
 		right:-15px; 
 		width:160px;
-		z-index:1100; 
+		z-index:1001; 
 		background:#F1DA91;
 	}
 	
